# mobile-trackpad

./: .gitignore  Cargo.toml  LICENSE  README.md  install-service.sh  mobile-trackpad.service  setup-permissions.sh  setup.sh  uninstall-service.sh
src/: main.rs
static/: clipboard.html  clipboard.js  files.html  files.js  index.html  script.js  style.css
