[package]
name = "mobile-trackpad"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
evdev = "0.12"
local-ip-address = "0.5"
arboard = "3.4"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
